GNOME Bugzilla – Bug 691766
Incorrect remote hostname
Last modified: 2013-06-13 12:57:15 UTC
My machine's hostname is "novo". This isn't a remotely accessible name. Vino's properties used to get the remotely accessible name from the router via upnp, which is one possibility. Otherwise, append ".local" to the short hostname (novo.local is handled as long as nss-mdns is installed).
Created attachment 246712 [details] [review] sharing: retrieve the mDNS hostname from Avahi, if available
Review of attachment 246712 [details] [review]: Looks good otherwise. ::: panels/sharing/cc-sharing-panel.c @@ +619,3 @@ + variant = g_dbus_connection_call_finish (connection, res, &error); + + if (error) if (variant == NULL) @@ +659,3 @@ + connection = g_bus_get_finish (res, &error); + + if (error) if (connection == NULL)
Attachment 246712 [details] pushed as 16a6789 - sharing: retrieve the mDNS hostname from Avahi, if available