sharing: retrieve the mDNS hostname from Avahi, if available

https://bugzilla.gnome.org/show_bug.cgi?id=691766